--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Default template for PDM package"
 authors = [
     {name = "IC2", email = "houlu8674@bupt.edu.cn"},
 ]
-dependencies = []
+dependencies = [
+    "flask>=3.0.3",
+    "pika>=1.3.2",
+    "waitress>=3.0.0",
+]
 requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
