--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "flask>=3.0.3",
     "pika>=1.3.2",
     "waitress>=3.0.0",
+    "schedule>=1.2.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
