--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "schedule>=1.2.2",
     "oracledb>=2.4.1",
     "datetime>=5.5",
+    "flask-siwadoc>=0.2.2",
+    "pydantic>=1.9.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
