1.增加了nodeid的获取，正确性需与前端联调 2.完成了订阅功能demo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "flask-siwadoc>=0.2.2",
     "pydantic>=1.9.0",
     "geopandas>=1.0.1",
+    "flask-cors>=5.0.0",
+    "marshmallow>=3.23.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
