初步合并了cmm、hy、lyf三人工作并进行测试，测试结果正常，尚有fzx工作未合并

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "geopandas>=1.0.1",
     "flask-cors>=5.0.0",
     "marshmallow>=3.23.1",
+    "requests>=2.32.3",
+    "minio>=7.2.12",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
