--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "geopandas>=1.0.1",
     "flask-cors>=5.0.0",
     "marshmallow>=3.23.1",
+    "gmssl @ git+https://github.com/duanhongyi/gmssl.git",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
